syntax = "proto3";


// Menentukan paket untuk file .proto ini
package credential;

// Menentukan Go package untuk hasil generate kode
option go_package = "/proto/account/credential;credential"; // Ganti dengan path sesuai proyek Anda

service Credential {

  rpc Read(ReadRequest) returns (ReadResponse);
}

message CredentialModel {
  // @gotags: bson:"_id,omitempty"
  string id = 1;
  // @gotags: bson:"username"
  string username = 2;
  // @gotags: bson:"password"
  string password = 3;
}

message ReadRequest {
  int32 limit = 1;
}

message ReadResponse {
  bool status = 1;
  int32 code = 2;
  string msg = 3;
  repeated CredentialModel data = 4;
  string error = 5;
}
